--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,32 @@
 
-/* Your CSS Code here. */
+.holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  height: 100vh; /* optional: to vertically center in full page */
+}
+
+.item {
+  width: 100px;
+  height: 100px;
+  margin: 0px;
+  background-color: lightblue; /* optional: just to see items better */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.item:nth-child(1) {
+  background-color: green;
+}
+
+.item:nth-child(2) {
+  background-color: red;
+}
+
+.item:nth-child(3) {
+  background-color: blue;
+}
